// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Computed chart dimensions should be equal to parent dimension with no axis minus margins 1`] = `
{
  "height": 60,
  "left": 20,
  "top": 20,
  "width": 60,
}
`;

exports[`Computed chart dimensions should be padded by a bottom axis 1`] = `
{
  "height": 22,
  "left": 20,
  "top": 20,
  "width": 60,
}
`;

exports[`Computed chart dimensions should be padded by a left axis 1`] = `
{
  "height": 50,
  "left": 48,
  "top": 25,
  "width": 32,
}
`;

exports[`Computed chart dimensions should be padded by a right axis 1`] = `
{
  "height": 50,
  "left": 20,
  "top": 25,
  "width": 32,
}
`;

exports[`Computed chart dimensions should be padded by a top axis 1`] = `
{
  "height": 22,
  "left": 20,
  "top": 58,
  "width": 60,
}
`;
